--- a/style/style.css
+++ b/style/style.css
@@ -14,17 +14,29 @@
 /*************NavBar**************/
 
  header {
-    background-color: #212120;
+    background-color: #272727;
     display: flex;
     justify-content: space-between; 
     height: 70px;
-    border-bottom: 1px solid red;
-
+    position: fixed;
+    width: 100%;
+    z-index: 10;
 }
 
-header img {
+header * {
+    background-color: #272727;
+}
+
+header #logo {
     position: relative;
-    left: 5%;
+    left: 2%;
+    cursor: pointer;
+    transform: scaleX(3);
+}
+
+header ul {
+    position: relative;
+    top: 20%;
 }
 
 header ul li {
@@ -32,22 +44,33 @@ header ul li {
     text-decoration: none;
     margin: 10px;
     position: relative;
-    right: 20%;
+    right: 10%;
+    cursor: pointer;
 }
 
-header ul li:hover {
+header ul li a {
+    text-decoration: none;
+    font-size: 1.2rem ;
+}
+
+header ul li a:hover {
     border-bottom: 2px solid aqua;
     transition: 0.3s ease-out;
 
 }
 
-header ul li:active {
+header ul li a:focus {
     color: aqua;
     border-bottom: none;
-    font-size: 0.9rem;
+    font-size: 1rem;
 }
 
 /**********************Body***********/
+
+body {
+ display: grid;
+}
+
 
 body main {
     display: flex;
@@ -56,42 +79,151 @@ body main {
     align-items: center;
 }
 
-body main .names {
+body .names {
     width: 45%;
    margin-top: 15%;
 
 }
 
-body main .names p,input {
+body  .names p,input {
     margin: 15px;
 }
 
-/* body main .photo {
+body .photo {
+   margin-top: 50%;
     display: flex;
     justify-content: center;
-    width: 750px;
-    height: 500px;
+    align-items: center;
+    width: 350px;
+    height: 350px;
     border: 3px solid aqua ;
     border-radius: 50%;
-} */
+    position: relative;
 
-body main img {
-   margin-top: 50%;
+}
+
+body  .photo img {
     width: 350px;
     height: 350px;
     border-radius: 50%;
     border: 3px solid aqua;
+   
 }
 
-body main #me {
+body  .photo:hover img {
+    position: absolute;
+    bottom: 10%;
+    border: none;
+    transform: scale(1.4);
+    transition: 0.3s ease-in-out;
+}
+
+body  #me {
     font-size: 2rem;
     font-weight: bold;
 }
 
-body main span {
-    color: aqua;
+body   input {
+    background-color: aqua;
+    padding: 10px;
+    border-radius: 18px;
+    color: black;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
 }
 
-body main #dest {
-    font-weight: bold;
+body  input:hover {
+    color: white;
+    border: 2px solid aqua;
+    background-color: #212121;
+}
+
+body  input:focus{
+    color:black ;
+    background-color: aquamarine;
+    transition: 3s;
+    border: none;
+}
+
+body  input:active {
+    transform: scale(0.8);
+    /* transition: 5s; */
+}
+
+/* *********************Skills************** */
+
+body #skills {
+    margin:   100px 9%;
+    font-size: 2rem;
+    position: relative;
+}
+
+
+
+body #skills div{
+    width: 100%;
+    height: 5px;
+    color: aqua;
+    position: absolute;
+    background-color: aqua;
+    top: 30px;
+    left: 90px;
+}
+
+body .skills * {
+    cursor: pointer;
+    color: white;
+    border-radius: 10px;
+
+}
+
+body .skills {
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
+    flex-direction: row;
+    gap: 50px ;
+    flex-wrap: nowrap;
+    overflow: scroll;
+    scrollbar-width: none;
+    margin: 50px 10%;
+
+}
+
+body .skills .skill {
+    width: 300px;
+    height: 300px;     
+    border-radius: 18px;
+    align-items: center;
+    border: 2px solid aqua;
+}
+
+body .skills .skill img {
+    width: 190px;
+    border-radius: 30px;
+}
+
+body .skills .skill:hover img {
+    opacity: 0.5;
+}
+
+body .skills .skill h1 {
+    color: black;
+    margin-bottom: 20px;
+    font-size: 1.3rem;
+    position: relative;
+    width: 100%;
+    background-color: aqua;
+    text-align: center;
+}
+
+body .skills .skill p {
+    text-align: center;
+}
+
+body .skills .skill3 img {
+    width: 160px;
+    height: 160px; 
+    padding: 25px 18px 0;
 }
